# mic-volume-control

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml
.claude/: settings.local.json
.github/: WORKFLOWS.md
.github/workflows/: ci.yml  lint.yml  release.yml
src/: audio.rs  config.rs  main.rs  scheduler.rs  tray.rs
