[package]
name = "mic-volume-control"
version = "0.2.0"
edition = "2024"
authors = ["Plague Fox <plugfox@gmail.com>"]
description = "Automatically maintains microphone volume at a configured level on Windows"
repository = "https://github.com/plugfox/mic-volume-control"
license = "MIT"
readme = "README.md"

[dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_System_TaskScheduler",
] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.14"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
